refactor user entity and dto